Add test for product filters by min and max price