@@ -1,14 +1,22 @@
 package ulaval.glo2003.e2e;
 
 
+import static com.google.common.base.Strings.isNullOrEmpty;
+import static com.google.common.truth.Truth.assertThat;
+import static io.restassured.RestAssured.given;
+import static ulaval.glo2003.Utils.StringUtil.mixUpperAndLowerCase;
+
 import com.github.javafaker.Faker;
 import io.restassured.http.ContentType;
 import io.restassured.http.Header;
 import io.restassured.http.Headers;
 import io.restassured.response.Response;
-
 import java.time.ZoneId;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.List;
+import java.util.Random;
 import java.util.stream.IntStream;
 import org.apache.http.HttpStatus;
 import ulaval.glo2003.Exceptions.ErrorCode;
@@ -21,15 +29,9 @@ import ulaval.glo2003.Seller.UI.SellerRequest;
 import ulaval.glo2003.Seller.UI.SellerResponse;
 import ulaval.glo2003.subjects.OffsetDateTimeSubject;
 
-import static com.google.common.base.Strings.isNullOrEmpty;
-import static com.google.common.truth.Truth.assertThat;
-import static io.restassured.RestAssured.*;
-import static ulaval.glo2003.Utils.StringUtil.mixUpperAndLowerCase;
-
 public class End2EndUtils {
 
     public final static Faker FAKER = new Faker();
-    private static final Random RANDOM = new Random();
     public final static int NUMBER_OF_PRODUCTS = 16;
     public static final String A_INVALID_ID = "13200298A";
     public static final String A_VALID_SELLER_NAME = "John Cena";
@@ -42,17 +44,21 @@ public class End2EndUtils {
     public static final String A_RANDOM_VALID_PRODUCT_TITLE = FAKER.commerce().productName();
     public static final String A_VALID_PRODUCT_DESCRIPTION = "An awesome generic product!";
     public static final Double A_VALID_PRODUCT_SUGGESTED_PRICE = 5.0;
-    public static final List<String> VALID_PRODUCT_CATEGORIES = new ArrayList(List.of("beauty", "electronics"));
+    public static final List<String> VALID_PRODUCT_CATEGORIES =
+            new ArrayList(List.of("beauty", "electronics"));
     public static final String A_INVALID_PRODUCT_TITLE = "    \n  \t \n ";
     public static final String A_INVALID_PRODUCT_DESCRIPTION = "    \n  \t \n ";
     public static final Double A_INVALID_PRODUCT_SUGGESTED_PRICE = 0.99;
-    public static final List<String> A_INVALID_PRODUCT_CATEGORIES = new ArrayList(List.of("BeAuTy", "JavaBaby", "electronics"));
-    private static final List<ProductCategory> PRODUCT_CATEGORIES_ENUM_VALUES = Arrays.asList(ProductCategory.values());
+    public static final List<String> A_INVALID_PRODUCT_CATEGORIES =
+            new ArrayList(List.of("BeAuTy", "JavaBaby", "electronics"));
+    private static final Random RANDOM = new Random();
+    private static final List<ProductCategory> PRODUCT_CATEGORIES_ENUM_VALUES =
+            Arrays.asList(ProductCategory.values());
     private static final int MAXIMUM_NUMBER_OF_CATEGORIES = 5;
     private static final double MINIMUM_PRODUCT_PRICE = 1;
     private static final double MAXIMUM_PRODUCT_PRICE = 10000;
-    
-    public static int getHealth(){
+
+    public static int getHealth() {
         return given()
                 .when()
                 .get("/health")
@@ -60,7 +66,7 @@ public class End2EndUtils {
                 .extract().statusCode();
     }
 
-    public static Response createSellerResource(SellerRequest sellerRequest){
+    public static Response createSellerResource(SellerRequest sellerRequest) {
         return createResource("/sellers", sellerRequest);
     }
 
@@ -72,13 +78,13 @@ public class End2EndUtils {
         return sellerRequest;
     }
 
-    public static String createValidSellerGetId(){
+    public static String createValidSellerGetId() {
         SellerRequest sellerRequest = createValidSeller();
         Response response = createResource("/sellers", sellerRequest);
         return extractLocationId(response);
     }
 
-    public static SellerRequest createRandomSeller(){
+    public static SellerRequest createRandomSeller() {
         SellerRequest sellerRequest = new SellerRequest();
         sellerRequest.name = FAKER.harryPotter().character();
         sellerRequest.bio = FAKER.harryPotter().quote();
@@ -90,7 +96,7 @@ public class End2EndUtils {
         return sellerRequest;
     }
 
-    public static String createRandomSellerGetId(){
+    public static String createRandomSellerGetId() {
         SellerRequest sellerRequest = createRandomSeller();
         Response response = createResource("/sellers", sellerRequest);
         return extractLocationId(response);
@@ -109,6 +115,7 @@ public class End2EndUtils {
         sellerRequest.name = A_INVALID_SELLER_NAME;
         return sellerRequest;
     }
+
     public static SellerRequest createSellerWithInvalidBio() {
         SellerRequest sellerRequest = createValidSeller();
         sellerRequest.bio = A_INVALID_SELLER_BIO;
@@ -122,12 +129,12 @@ public class End2EndUtils {
     }
 
 
-    public static String addProductToSellerGetId(String sellerId){
+    public static String addProductToSellerGetId(String sellerId) {
         Response response = createProductResource(createValidProduct(), sellerId);
         return extractLocationId(response);
     }
 
-    public static void addRandomProductsToSeller(String sellerId, int numberOfProducts){
+    public static void addRandomProductsToSeller(String sellerId, int numberOfProducts) {
         IntStream.range(0, numberOfProducts).forEach(
                 i -> createProductResource(createRandomProduct(), sellerId));
     }
@@ -137,7 +144,7 @@ public class End2EndUtils {
         return getResourceById("/sellers/{sellerId}", sellerId);
     }
 
-    public static Response createProductResource(ProductRequest productRequest, String sellerId){
+    public static Response createProductResource(ProductRequest productRequest, String sellerId) {
         Headers productSeller = new Headers(new Header("X-Seller-Id", sellerId));
         return createResource("/products", productRequest, productSeller);
     }
@@ -152,32 +159,35 @@ public class End2EndUtils {
         return productRequest;
     }
 
-    public static String createValidProductGetId(String sellerId){
+    public static String createValidProductGetId(String sellerId) {
         ProductRequest productRequest = createValidProduct();
         Response response = createProductResource(productRequest, sellerId);
         return extractLocationId(response);
     }
 
-    public static ProductRequest createRandomProduct(){
+    public static ProductRequest createRandomProduct() {
         ProductRequest productRequest = new ProductRequest();
         productRequest.title = FAKER.commerce().productName();
         productRequest.description = FAKER.lorem().sentence();
-        productRequest.suggestedPrice = Double.parseDouble(FAKER.commerce().price(MINIMUM_PRODUCT_PRICE, MAXIMUM_PRODUCT_PRICE));
+        productRequest.suggestedPrice = Double.parseDouble(
+                FAKER.commerce().price(MINIMUM_PRODUCT_PRICE, MAXIMUM_PRODUCT_PRICE));
         productRequest.categories = getRandomCategories(MAXIMUM_NUMBER_OF_CATEGORIES);
 
         return productRequest;
     }
 
-    public static void createRandomProductsFromRandomSellersWithTitle(String title, int numberOfProducts){
-      for(int i = 0; i < numberOfProducts; i++){
-          ProductRequest productRequest = createRandomProduct();
-          productRequest.title = mixUpperAndLowerCase(FAKER.letterify("??? " + title + " ???"));
-          createProductResource(productRequest, createRandomSellerGetId());
-      }
+    public static void createRandomProductsFromRandomSellersWithTitle(String title,
+                                                                      int numberOfProducts) {
+        for (int i = 0; i < numberOfProducts; i++) {
+            ProductRequest productRequest = createRandomProduct();
+            productRequest.title = mixUpperAndLowerCase(FAKER.letterify("??? " + title + " ???"));
+            createProductResource(productRequest, createRandomSellerGetId());
+        }
     }
 
-    public static void createRandomProductsFromRandomSellersWithCategories(List<String> categories, int numberOfProducts){
-        for(int i = 0; i < numberOfProducts; i++){
+    public static void createRandomProductsWithCommonCategoriesFromRandomSellers(
+            List<String> categories, int numberOfProducts) {
+        for (int i = 0; i < numberOfProducts; i++) {
             ProductRequest productRequest = createRandomProduct();
             productRequest.categories = getRandomCategories(MAXIMUM_NUMBER_OF_CATEGORIES);
             productRequest.categories.add(categories.get(RANDOM.nextInt(categories.size())));
@@ -186,13 +196,42 @@ public class End2EndUtils {
         }
     }
 
-    public static void createRandomProductsFromRandomSellers(int numberOfProducts){
-        for(int i = 0; i < numberOfProducts; i++){
+    public static void createRandomProductsWithoutCategoriesFromRandomSellers(
+            int numberOfProducts) {
+        for (int i = 0; i < numberOfProducts; i++) {
             ProductRequest productRequest = createRandomProduct();
+            productRequest.categories = new ArrayList<>();
+
             createProductResource(productRequest, createRandomSellerGetId());
         }
     }
 
+    public static void createRandomProductsFromRandomSellersWithMinPrice(double minPrice,
+                                                                         int numberOfProducts) {
+        for (int i = 0; i < numberOfProducts; i++) {
+            ProductRequest productRequest = createRandomProduct();
+            productRequest.suggestedPrice =
+                    FAKER.number().randomDouble(2, (int) minPrice + 1, (int) MAXIMUM_PRODUCT_PRICE);
+            createProductResource(productRequest, createRandomSellerGetId());
+        }
+    }
+
+    public static void createRandomProductsFromRandomSellersWithMaxPrice(double maxPrice,
+                                                                         int numberOfProducts) {
+        for (int i = 0; i < numberOfProducts; i++) {
+            ProductRequest productRequest = createRandomProduct();
+            productRequest.suggestedPrice =
+                    FAKER.number().randomDouble(2, (int) MINIMUM_PRODUCT_PRICE, (int) maxPrice - 1);
+            createProductResource(productRequest, createRandomSellerGetId());
+        }
+    }
+
+    public static void createRandomProductsFromRandomSellers(int numberOfProducts) {
+        for (int i = 0; i < numberOfProducts; i++) {
+            ProductRequest productRequest = createRandomProduct();
+            createProductResource(productRequest, createRandomSellerGetId());
+        }
+    }
 
 
     public static ProductRequest createValidProductWithoutCategories() {
@@ -221,6 +260,7 @@ public class End2EndUtils {
         productRequest.description = A_INVALID_PRODUCT_DESCRIPTION;
         return productRequest;
     }
+
     public static ProductRequest createProductWithInvalidPrice() {
         ProductRequest productRequest = createValidProduct();
         productRequest.suggestedPrice = A_INVALID_PRODUCT_SUGGESTED_PRICE;
@@ -238,7 +278,7 @@ public class End2EndUtils {
     }
 
     public static Response getProductsBySellerId(String sellerId) {
-       String filterName = "sellerId";
+        String filterName = "sellerId";
         return getResourceByFilter("/products", filterName, sellerId);
     }
 
@@ -247,28 +287,30 @@ public class End2EndUtils {
         return getResourceByFilter("/products", filterName, title);
     }
 
-    public static Response getProductsByCategories(List<String> categories){
+    public static Response getProductsByCategories(List<String> categories) {
         String filterName = "categories";
         return getResourceByFilter("/products", filterName, categories);
     }
 
-    public static Response getProductsByMinPrice(Double minPrice){
+    public static Response getProductsByMinPrice(Double minPrice) {
         String filterName = "minPrice";
         return getResourceByFilter("/products", filterName, minPrice);
     }
 
-    public static Response getProductsByMaxPrice(Double maxPrice){
+    public static Response getProductsByMaxPrice(Double maxPrice) {
         String filterName = "maxPrice";
         return getResourceByFilter("/products", filterName, maxPrice);
     }
 
-    public static void assertThatPostResponseIsValid(Response postResponse){
+    public static void assertThatPostResponseIsValid(Response postResponse) {
         assertThat(postResponse.statusCode()).isEqualTo(HttpStatus.SC_CREATED);
         assertThat(isNullOrEmpty(extractLocationId(postResponse))).isFalse();
         assertThat(isNullOrEmpty(postResponse.body().asString())).isTrue();
     }
 
-    public static void assertThatSellerResponseFieldsAreValid(SellerResponse sellerResponse, String expectedSellerId, String expectedProductId){
+    public static void assertThatSellerResponseFieldsAreValid(SellerResponse sellerResponse,
+                                                              String expectedSellerId,
+                                                              String expectedProductId) {
         assertThat(sellerResponse.id).isEqualTo(expectedSellerId);
         assertThat(sellerResponse.name).isEqualTo(A_VALID_SELLER_NAME);
         assertThat(sellerResponse.bio).isEqualTo(A_VALID_SELLER_BIO);
@@ -278,48 +320,79 @@ public class End2EndUtils {
         assertThatSellerProductResponseFieldsAreValid(sellerProductResponse, expectedProductId);
     }
 
-    public static void assertThatSellerProductResponseFieldsAreValid(SellerProductResponse productResponse, String expectedProductId){
+    public static void assertThatSellerProductResponseFieldsAreValid(
+            SellerProductResponse productResponse, String expectedProductId) {
         assertThat(productResponse.id).isEqualTo(expectedProductId);
         OffsetDateTimeSubject.assertThat(productResponse.createdAt).isWithinExpectedRange();
-        assertThat(productResponse.title).isEqualTo (A_VALID_PRODUCT_TITLE);
-        assertThat(productResponse.description).isEqualTo (A_VALID_PRODUCT_DESCRIPTION);
-        assertThat(productResponse.suggestedPrice).isEqualTo (A_VALID_PRODUCT_SUGGESTED_PRICE);
-        assertThat(productResponse.categories).isEqualTo(VALID_PRODUCT_CATEGORIES);
+        assertThat(productResponse.title).isEqualTo(A_VALID_PRODUCT_TITLE);
+        assertThat(productResponse.description).isEqualTo(A_VALID_PRODUCT_DESCRIPTION);
+        assertThat(productResponse.suggestedPrice).isEqualTo(A_VALID_PRODUCT_SUGGESTED_PRICE);
+        assertThat(productResponse.categories).containsExactlyElementsIn(VALID_PRODUCT_CATEGORIES);
         assertThat(productResponse.offers.count).isEqualTo(0);
     }
 
-    public static void assertThatProductResponseFieldsAreValid(ProductResponse productResponse, String expectedProductId,
-                                                                     String expectedSellerId){
+    public static void assertThatProductResponseFieldsAreValid(ProductResponse productResponse,
+                                                               String expectedProductId,
+                                                               String expectedSellerId) {
         assertThat(productResponse.seller.id).isEqualTo(expectedSellerId);
         assertThat(productResponse.seller.name).isEqualTo(A_VALID_SELLER_NAME);
         assertThat(productResponse.id).isEqualTo(expectedProductId);
         OffsetDateTimeSubject.assertThat(productResponse.createdAt).isWithinExpectedRange();
-        assertThat(productResponse.title).isEqualTo (A_VALID_PRODUCT_TITLE);
-        assertThat(productResponse.description).isEqualTo (A_VALID_PRODUCT_DESCRIPTION);
-        assertThat(productResponse.suggestedPrice).isEqualTo (A_VALID_PRODUCT_SUGGESTED_PRICE);
-        assertThat(productResponse.categories).isEqualTo(VALID_PRODUCT_CATEGORIES);
+        assertThat(productResponse.title).isEqualTo(A_VALID_PRODUCT_TITLE);
+        assertThat(productResponse.description).isEqualTo(A_VALID_PRODUCT_DESCRIPTION);
+        assertThat(productResponse.suggestedPrice).isEqualTo(A_VALID_PRODUCT_SUGGESTED_PRICE);
+        assertThat(productResponse.categories).containsExactlyElementsIn(VALID_PRODUCT_CATEGORIES);
         assertThat(productResponse.offers.count).isEqualTo(0);
     }
 
-    public static void assertThatAllProductsHaveTheSameSellerId(List<ProductResponse> filteredProducts, String sellerId){
-        for(ProductResponse product : filteredProducts){
+    public static void assertThatAllProductsHaveTheSameSellerId(
+            List<ProductResponse> filteredProducts, String sellerId) {
+        for (ProductResponse product : filteredProducts) {
             assertThat(product.seller.id).isEqualTo(sellerId);
         }
     }
 
-    public static void assertThatResponseIsItemNotFoundError(Response response){
-        assertThatErrorResponseIsValid(response, HttpStatus.SC_NOT_FOUND, ErrorCode.ITEM_NOT_FOUND);
+    public static void assertThatAllProductsHaveAtLeastOneCategoryFromGivenCategories(
+            List<ProductResponse> filteredProducts,
+            List<String> givenCategories) {
+        for (ProductResponse product : filteredProducts) {
+            assertThat(product.categories).containsAnyIn(givenCategories);
+        }
     }
 
-    public static void assertThatResponseIsMissingParamError(Response response){
-        assertThatErrorResponseIsValid(response, HttpStatus.SC_BAD_REQUEST, ErrorCode.MISSING_PARAMETER);
+    public static void assertThatAllProductsPriceIsGreaterOrEqualToMinPrice(
+            List<ProductResponse> filteredProducts,
+            double minPrice) {
+        for (ProductResponse product : filteredProducts) {
+            assertThat(product.suggestedPrice).isAtLeast(minPrice);
+        }
     }
 
-    public static void assertThatResponseIsInvalidParamError(Response response){
-        assertThatErrorResponseIsValid(response, HttpStatus.SC_BAD_REQUEST, ErrorCode.INVALID_PARAMETER);
+    public static void assertThatAllProductsPriceIsLesserOrEqualToMaxPrice(
+            List<ProductResponse> filteredProducts,
+            double maxPrice) {
+        for (ProductResponse product : filteredProducts) {
+            assertThat(product.suggestedPrice).isAtMost(maxPrice);
+        }
     }
 
-    private static void assertThatErrorResponseIsValid(Response response, int expectedStatus, ErrorCode expectedCode){
+    public static void assertThatResponseIsItemNotFoundError(Response response) {
+        assertThatErrorResponseIsValid(response, HttpStatus.SC_NOT_FOUND,
+                ErrorCode.ITEM_NOT_FOUND);
+    }
+
+    public static void assertThatResponseIsMissingParamError(Response response) {
+        assertThatErrorResponseIsValid(response, HttpStatus.SC_BAD_REQUEST,
+                ErrorCode.MISSING_PARAMETER);
+    }
+
+    public static void assertThatResponseIsInvalidParamError(Response response) {
+        assertThatErrorResponseIsValid(response, HttpStatus.SC_BAD_REQUEST,
+                ErrorCode.INVALID_PARAMETER);
+    }
+
+    private static void assertThatErrorResponseIsValid(Response response, int expectedStatus,
+                                                       ErrorCode expectedCode) {
         assertThat(response.statusCode()).isEqualTo(expectedStatus);
         ErrorResponse errorResponse = response.as(ErrorResponse.class);
         assertThat(errorResponse.description).isNotNull();
@@ -359,7 +432,8 @@ public class End2EndUtils {
                 .response();
     }
 
-    private static Response getResourceByFilter(String path, String filterName, Object filterValue) {
+    private static Response getResourceByFilter(String path, String filterName,
+                                                Object filterValue) {
         return given()
                 .queryParam(filterName, filterValue)
                 .contentType(ContentType.JSON)
@@ -370,7 +444,8 @@ public class End2EndUtils {
                 .response();
     }
 
-    private static Response getResourceByFilter(String path, String filterName, Collection filterValue) {
+    private static Response getResourceByFilter(String path, String filterName,
+                                                Collection filterValue) {
         return given()
                 .queryParam(filterName, filterValue)
                 .contentType(ContentType.JSON)
@@ -381,20 +456,22 @@ public class End2EndUtils {
                 .response();
     }
 
-    private static String extractLocationId(Response response){
+    private static String extractLocationId(Response response) {
         String location = response.header("Location");
         return location.substring(location.lastIndexOf("/") + 1);
     }
 
 
-    private static List<String> getRandomCategories(int maximumNumberOfCategories){
+    private static List<String> getRandomCategories(int maximumNumberOfCategories) {
         List<ProductCategory> randomCategories = new ArrayList<>();
-        for (int i=0; i < RANDOM.nextInt(maximumNumberOfCategories); i++){
-            randomCategories.add(PRODUCT_CATEGORIES_ENUM_VALUES.
-                    get(RANDOM.nextInt(PRODUCT_CATEGORIES_ENUM_VALUES.size())));
+        for (int i = 0; i < RANDOM.nextInt(maximumNumberOfCategories); i++) {
+            randomCategories.add(PRODUCT_CATEGORIES_ENUM_VALUES.get(
+                    RANDOM.nextInt(PRODUCT_CATEGORIES_ENUM_VALUES.size())));
         }
+
         return ProductCategory.toStringList(randomCategories);
     }
 
-    }
+
+}
 
